[package]
name = "goxoy-socket-client"
version = "0.1.8"
edition = "2021"
authors = ["Omer GOKSOY <goksoy.omer@gmail.com>"]
description = "Goxoy Socket Client Library"
license = "MIT"
keywords = ["socket-client"]
rust-version ="1.66.1"
repository = "https://github.com/Goxoy/goxoy-socket-client/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goxoy-address-parser = "0.0.9"
